force-app/main/default/objects/Sirok__c/Sirok__c.object-meta.xml
<CustomObject>
    <description>Объект, представляющий собой сырок с набором его характеристик.</description>
    <label>Sirok</label>
    <nameField>
        <label>Sirok Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sirki</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>