force-app/main/default/objects/Sirok__c/fields/Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Price__c</fullName>
    <description>Средняя стоимость конкретного сырка по всем магазинам.</description>
    <formula>Store_Items_Price_Sum__c  /  Store_Item_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>