force-app/main/default/objects/Sirok__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <description>Состав сырка.</description>
    <label>Ingredients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>