force-app/main/default/objects/Sirok__c/fields/S_Narodom__c.field-meta.xml
<CustomField>
    <fullName>S_Narodom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S Narodom</label>
    <type>Checkbox</type>
</CustomField>