force-app/main/default/objects/Sirok__c/fields/Store_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Store_Item_Count__c</fullName>
    <description>Amount of Sirok Store Items.</description>
    <label>Store Item Count</label>
    <summaryForeignKey>Store_Item__c.Sirok__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>