force-app/main/default/objects/Sirok__c/fields/Store_Items_Price_Sum__c.field-meta.xml
<CustomField>
    <fullName>Store_Items_Price_Sum__c</fullName>
    <description>Общая стоимость всех предложений по одному конкретному сырку.</description>
    <label>Store Items Price Sum</label>
    <summarizedField>Store_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Store_Item__c.Sirok__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>