force-app/main/default/objects/Sirok__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Dried apricots</fullName>
            </value>
            <value>
                <fullName>Prunes</fullName>
            </value>
            <value>
                <fullName>Marzipan</fullName>
            </value>
            <value>
                <fullName>Blueberry</fullName>
            </value>
            <value>
                <fullName>Poppy seeds</fullName>
            </value>
            <value>
                <fullName>Condensed milk</fullName>
            </value>
            <value>
                <fullName>Kartoshka</fullName>
            </value>
            <value>
                <fullName>Berry Mix</fullName>
            </value>
            <value>
                <fullName>Marmalade</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>